Finished basic layout. All of the html and styling is complete, improving flex in progress

--- a/index.html
+++ b/index.html
@@ -97,5 +97,30 @@
 
 <!---------------------------------------------------------------------->
 
+    <div class="signuptab">
+
+        <div class="signupcontent">
+
+            <div class="columndiv">
+                <p class="headf">Call to action! It's time!</p>
+                <p class="sub">Sign up for our product by clicking that button right over there!</p>
+            </div>
+
+            <div>
+                <button class="signupbutton">Sign Up</button>
+            </div>
+        </div>
+
+    </div>
+
+<!---------------------------------------------------------------------->
+
+    <div class="footer">
+
+        <div class="copyright">
+            <p>Copyright © The Odin Project 2024</p>
+        </div>
+        
+    </div>
 </body>
 </html>
